fixed alignment

--- a/about-style.css
+++ b/about-style.css
@@ -1,3 +1,9 @@
 ﻿body
 {
+
+}
+
+img
+{
+    align-content: center;
 }
